# wenyi

./: .gitignore  CONTRIBUTING.md  README.md  config.yaml  project.yml  pyproject.toml
.codex/environments/: environment.toml
WenyiMac.xcodeproj/: project.pbxproj
WenyiMac.xcodeproj/xcshareddata/xcschemes/: WenyiMac.xcscheme
docs/: configuration.md  usage.md
docs/superpowers/specs/: 2026-07-11-macos-app-design.md
macos/WenyiMac/App/: WenyiMacApp.swift
macos/WenyiMac/Models/: AppModels.swift
macos/WenyiMac/Services/: BookInspector.swift  ConnectionTester.swift  JSONLineDecoder.swift  ProgressSnapshotReader.swift  PythonDetector.swift  RuntimeClock.swift  (+2 more)
macos/WenyiMacTests/: JSONLineDecoderTests.swift  SecureSettingsStoreTests.swift
script/: build_and_run.sh  open-webui.py  package_release.sh  start-webui.bat  start-webui.sh  webui.py
tasks/: lessons.md  todo.md
tests/: test_app_worker.py  test_assemble.py  test_bilingual.py  test_book_inspector.py  test_cli.py  test_config.py  test_ingest.py  test_newfeatures.py  test_usage.py  test_web.py
trans_novel/: app_worker.py  book_inspector.py  cli.py  config.py  web.py
trans_novel/agents/: consistency.py  glossary_auditor.py  prompts.py
trans_novel/assemble/: writer.py
trans_novel/glossary/: extractor.py  store.py
trans_novel/ingest/: epub_reader.py
trans_novel/llm/: base.py  usage.py
trans_novel/pipeline/: orchestrator.py  runstore.py
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
web/src/: AdvancedWorkspace.tsx  App.test.tsx  App.tsx  api.ts  styles.css
(+7 files in other folders)
