[project]
name = "trans-novel"
version = "0.2.0"
description = "多 Agent 协同长篇小说翻译系统（多语言到中文），维护专有名词对照表以保证一致性、减少漏译。"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40",        # DeepSeek（OpenAI 兼容）调用
    "pydantic>=2.7",       # 模型 / 配置校验
    "pyyaml>=6.0",         # 读取 config.yaml
    "tenacity>=8.2",       # LLM 调用重试/退避
    "beautifulsoup4>=4.12", # EPUB 正文块提取
    "lxml>=5.0",           # bs4 的 XHTML 解析后端
    "ebooklib>=0.18",      # EPUB 读写
    "typer>=0.12",         # CLI
    "rich>=13.7",          # 表格 / 进度条
    "fastapi>=0.115",      # 本机 Web UI 服务
    "uvicorn>=0.34",       # ASGI 服务器
    "python-multipart>=0.0.20", # 图书上传
]

[project.scripts]
trans-novel = "trans_novel.cli:main"
wenyi-web = "trans_novel.web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trans_novel"]
